# BalatroCopy

./: .gitignore  AudioManager.cpp  AudioManager.h  Balatro.lnk  BalatroStart.bat  CMakeLists.txt  DicesBalatro.cpp  DicesBalatro.h  ExitPopup.cpp  ExitPopup.h  FadeEffect.cpp  FadeEffect.h  GameMenu.cpp  GameMenu.h  HadeMenu.cpp  HadeMenu.h  MenuBalatro.cpp  MenuBalatro.h  MenuPause.cpp  MenuPause.h  NamePopup.cpp  NamePopup.h  README.md  RectangleHover.cpp  RectangleHover.h  SettingsMenu.cpp  SettingsMenu.h  SwayText.h  TextAnimator.cpp  TextAnimator.h  TextInput.cpp  TextInput.h  TitleLetters.cpp  TitleLetters.h  VolumeSlider.cpp  VolumeSlider.h  main.cpp
